tests/rosetta/out/Java/additive-primes.error
javac: exit status 1
/tmp/AdditivePrimes.java:34: error: incompatible types: int cannot be converted to String
            x = (int)(Integer.parseInt((x / 10)));
                                          ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
